--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ the room to grab the fallen meteor rock. Pete chooses a <span style="font-weight
 Chloe chooses a <span style="font-weight: bold">Queen</span>, and Lana plays the <span style="font-weight: bold">Seven</span>. Chloe
 reaches the rock first, Pete gets across the room but not in time,
 while Lana&rsquo;s jacket is stuck on the cappuccino machine and it is
-tumbling towards her.</p><h5>2.3.3<tt>&nbsp;</tt><a name="(part._.Meta_.Notes)"></a>Meta Notes</h5><p><span style="font-weight: bold">Strategic Note:</span> <a href="#%28tech._lead%29" class="techoutside" data-pltdoc="x"><span class="techinside">Leads</span></a> know which cards have already been
+tumbling towards her.</p><h5>2.3.3<tt>&nbsp;</tt><a name="(part._.Meta_.Notes)"></a>Meta Notes</h5><p><span style="font-weight: bold">Optional Note:</span> If you leave the <span style="font-weight: bold">Joker</span> in the deck, then
+whenever it is drawn, make it a catastrophic, scene-changing
+<a href="#%28tech._failure%29" class="techoutside" data-pltdoc="x"><span class="techinside">failure</span></a>.</p><p><span style="font-weight: bold">Strategic Note:</span> <a href="#%28tech._lead%29" class="techoutside" data-pltdoc="x"><span class="techinside">Leads</span></a> know which cards have already been
 played and which have not, so they have a fuzzy estimate of what cards
 they may go up against. Similarly, they have an idea of where their
 strengths and weakness lay, so they can decide how much to commit to
